# dco-check

./: .gitlab-ci.yml  .travis.yml  Dockerfile  README.md  action.yml  appveyor.yml  azure-pipelines.yml  codecov.yml  dco_check.py  event.json  setup.cfg  setup.py  stdeb.cfg
.circleci/: config.yml
.github/workflows/: dco.yml  main.yml  publish.yml  tag.yml  test.yml
dco_check/: __init__.py  dco_check.py
test/: test_dco_check.py  test_flake8.py  test_logger.py  test_mypy.py  test_options_args.py  test_processing.py  test_utils.py
