[metadata]
name = dco-check
version = attr: dco_check.__version__
url = https://github.com/christophebedard/dco-check/
project_urls =
    Changelog = https://github.com/christophebedard/dco-check/milestones?state=closed
    GitHub = https://github.com/christophebedard/dco-check/
author = Christophe Bedard
author_email = bedard.christophe@gmail.com
maintainer = Christophe Bedard
maintainer_email = bedard.christophe@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
license = Apache License, Version 2.0
description = Simple DCO check script to be used in any CI.
long_description = file: README.md
keywords = dco, check

[options]
packages = find:
tests_require =
    flake8
    flake8-blind-except
    flake8-builtins
    flake8-class-newline
    flake8-comprehensions
    flake8-deprecated
    flake8-docstrings
    flake8-import-order
    flake8-quotes
    pep8-naming
    pyenchant
    pylint
    pytest
    pytest-cov
zip_safe = true

[options.entry_points]
console_scripts =
    dco-check = dco_check.dco_check:main

[flake8]
import-order-style = google
max-line-length = 99
